docs: Refine project description and add Codecov badge
- Updated README.md slogan for conciseness and clarity.
- Enhanced "Features" section to emphasize Solidify's all-in-one capabilities (CLI, ORM, REST, GraphQL).
- Added GraphQL and CLI quick-start examples to README.md.
- Incorporated Codecov badge into README.md.
- Updated package.json with 'files', 'keywords', 'homepage', and 'bugs' fields for npm publishing.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "solidify",
+  "name": "solidify.js",
   "version": "0.1.0",
   "description": "Solidify: Fast, solid, and seamless. Your all-in-one Node.js framework for CLI, ORM, REST, and GraphQL.",
   "type": "module",
