--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,8 +24,9 @@ jobs:
 
       - name: Run Biome Check
         run: npm run lint
-  test:
-    name: Unit & Integration Tests
+
+  test-and-coverage:
+    name: Test & Publish Coverage
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -39,6 +40,11 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
-      
-      - name: Run tests
-        run: npm test
+
+      - name: Run tests and generate coverage
+        run: npx c8 --reporter=lcov --reporter=text npm test
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v4
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
